<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TestXmpp</string>

    <string name="back">返回</string>
    <string name="login">登陆</string>
    <string name="register">注册</string>

    <!-- register -->
    <string name="user_register">用户注册</string>
    <string name="user_email">邮箱</string>
    <string name="user_account">账号</string>
    <string name="user_name">昵称</string>
    <string name="user_pass">密码</string>

    <!-- login -->
    <string name="user_login">用户登陆</string>
    <string name="login_user">账号</string>
    <string name="login_pass">密码</string>
    <string name="login_memory">记住密码</string>
    <string name="login_auto">自动登录</string>

    <!-- friend -->
    <string name="friend_mine">我的好友</string>
    <string name="friend_list_empty">形单影只，去找朋友吧</string>

    <!-- chat -->
    <string name="chat_more">图片</string>
    <string name="chat_send">发送</string>

    <string name="send_image">图片</string>
    <string name="send_emotion">表情</string>
    <string name="send_file">文件</string>
    <string name="send_video">视频</string>
    <string name="title_activity_add_friend">AddFriend</string>

</resources>
