<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <include layout="@layout/layout_header" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/et_login_user"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="30dp"
                android:hint="@string/login_user"
                android:textColor="@color/gray_text" />

            <EditText
                android:id="@+id/et_login_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:hint="@string/login_pass"
                android:textColor="@color/gray_text" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="horizontal" >

                <CheckBox
                    android:id="@+id/cb_login_memory"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login_memory"
                    android:textColor="@color/gray_hint" />

                <CheckBox
                    android:id="@+id/cb_login_auto"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_normal"
                    android:text="@string/login_auto"
                    android:textColor="@color/gray_hint" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/btn_register"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/register" />

                <View
                    android:layout_width="10dp"
                    android:layout_height="40dp" />

                <Button
                    android:id="@+id/btn_login"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/login" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>